--- a/index.html
+++ b/index.html
@@ -71,6 +71,50 @@
     </section>
     <section class="about">
       <h3 id="about-title">about us</h3>
+      <section class="team">
+        <div class="personal-card">
+          <div class="photo-wrapper">
+            <img src="member1.webp" alt="member1" />
+          </div>
+          <h4 class="name">Eric Tsai</h4>
+          <p class="intro">Lorem, ipsum dolor.</p>
+        </div>
+        <div class="personal-card">
+          <div class="photo-wrapper">
+            <img src="member2.webp" alt="member2" />
+          </div>
+          <h4 class="name">Nance Lai</h4>
+          <p class="intro">Lorem, ipsum dolor.</p>
+        </div>
+        <div class="personal-card">
+          <div class="photo-wrapper">
+            <img src="member3.webp" alt="member3" />
+          </div>
+          <h4 class="name">Sam Pan</h4>
+          <p class="intro">Lorem, ipsum dolor.</p>
+        </div>
+        <div class="personal-card">
+          <div class="photo-wrapper">
+            <img src="member4.webp" alt="member4" />
+          </div>
+          <h4 class="name">Andrew Tan</h4>
+          <p class="intro">Lorem, ipsum dolor.</p>
+        </div>
+        <div class="personal-card">
+          <div class="photo-wrapper">
+            <img src="member5.webp" alt="member5" />
+          </div>
+          <h4 class="name">John Doe</h4>
+          <p class="intro">Lorem, ipsum dolor.</p>
+        </div>
+        <div class="personal-card">
+          <div class="photo-wrapper">
+            <img src="member6.webp" alt="member6" />
+          </div>
+          <h4 class="name">Jim Chen</h4>
+          <p class="intro">Lorem, ipsum dolor.</p>
+        </div>
+      </section>
     </section>
   </body>
 </html>
