上傳其他資料

--- a/index.html
+++ b/index.html
@@ -10,111 +10,182 @@
     <title>Template</title>
   </head>
   <body>
-    <h1>Lorem.</h1>
-    <h2>Lorem ipsum dolor sit.</h2>
-    <nav>
-      <a id="visit" href="#visit-title">visit</a>
-      <a id="stay" href="#stay-title">stay</a>
-      <a id="learn" href="#learn-title">learn</a>
-      <a id="about" href="#about-title">about us</a>
-    </nav>
+    <header>
+      <h1>Lorem.</h1>
+      <h2>Lorem ipsum dolor sit.</h2>
+      <nav>
+        <a id="visit" href="#visit-title">visit</a>
+        <a id="stay" href="#stay-title">stay</a>
+        <a id="learn" href="#learn-title">learn</a>
+        <a id="about" href="#about-title">about us</a>
+      </nav>
+    </header>
     <video autoplay muted loop>
       <source src="windmill.mp4" type="video/mp4" />
     </video>
+    <main>
+      <section class="visit">
+        <h3 id="visit-title">visit</h3>
 
-    <section class="visit">
-      <h3 id="visit-title">visit</h3>
-
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia, nemo
-        sint?
-      </p>
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d235888.94148375577!2d120.24589383281248!3d22.513009400000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346e1f3dedc927bf%3A0x8b2685d7d8ded7a1!2z5qa05qek6a2P6L6y5aC0LU1vcnkgRHVyaWFuIEZhcm0!5e0!3m2!1szh-TW!2stw!4v1677221087067!5m2!1szh-TW!2stw"
-        allowfullscreen=""
-        loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"
-      >
-      </iframe>
-      <table>
-        <thead>
-          <tr>
-            <th scope="col">LOREM</th>
-            <th scope="col">LOREM</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Lorem.</td>
-            <td>Lorem.</td>
-          </tr>
-          <tr>
-            <td>Lorem.</td>
-            <td>Lorem.</td>
-          </tr>
-          <tr>
-            <td>Lorem.</td>
-            <td>Lorem.</td>
-          </tr>
-          <tr>
-            <td>Lorem.</td>
-            <td>Lorem.</td>
-          </tr>
-        </tbody>
-      </table>
-    </section>
-    <section class="stay">
-      <h3 id="stay-title">stay</h3>
-    </section>
-    <section class="learn">
-      <h3 id="learn-title">learn</h3>
-    </section>
-    <section class="about">
-      <h3 id="about-title">about us</h3>
-      <section class="team">
-        <div class="personal-card">
-          <div class="photo-wrapper">
-            <img src="member1.webp" alt="member1" />
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia,
+          nemo sint?
+        </p>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d235888.94148375577!2d120.24589383281248!3d22.513009400000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346e1f3dedc927bf%3A0x8b2685d7d8ded7a1!2z5qa05qek6a2P6L6y5aC0LU1vcnkgRHVyaWFuIEZhcm0!5e0!3m2!1szh-TW!2stw!4v1677221087067!5m2!1szh-TW!2stw"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        >
+        </iframe>
+        <table>
+          <thead>
+            <tr>
+              <th scope="col">LOREM</th>
+              <th scope="col">LOREM</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Lorem.</td>
+              <td>Lorem.</td>
+            </tr>
+            <tr>
+              <td>Lorem.</td>
+              <td>Lorem.</td>
+            </tr>
+            <tr>
+              <td>Lorem.</td>
+              <td>Lorem.</td>
+            </tr>
+            <tr>
+              <td>Lorem.</td>
+              <td>Lorem.</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+      <section class="stay">
+        <h3 id="stay-title">stay</h3>
+        <ol>
+          <li>
+            <h4>rosa hotel</h4>
+            <img src="hotel1.jpg" alt="rosa hotel" />
+            <p>Lorem ipsum dolor sit amet.</p>
+            <address>
+              <p>address: Lorem ipsum dolor sit.</p>
+              <p>tel: 08-46581264</p>
+            </address>
+          </li>
+          <li>
+            <h4>telalive</h4>
+            <img src="hotel2.jpg" alt="telalive" />
+            <p>Lorem, ipsum dolor.</p>
+            <address>
+              <p>address: Lorem ipsum dolor t.</p>
+              <p>tel: 09-46581781</p>
+            </address>
+          </li>
+        </ol>
+      </section>
+      <section class="learn">
+        <h3 id="learn-title">learn</h3>
+        <div class="learn-layout">
+          <img src="old.jpg" alt="old farm" />
+          <div class="learn-text">
+            <h4>history.</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Consectetur non ab eius voluptatibus ut molestias unde cupiditate
+              excepturi! Non voluptate ducimus cumque totam minus iusto beatae
+              magnam dolore quidem maiores, sapiente culpa quia, dignissimos,
+              consequuntur veniam nemo! Sapiente voluptatibus nobis architecto
+              quae ratione. Incidunt consequatur sapiente optio, voluptas
+              adipisci amet. Lorem ipsum, dolor sit amet consectetur adipisicing
+              elit.
+            </p>
+            <p>
+              Modi deleniti iste, accusantium, vero, impedit tempora alias rem
+              minus inventore reiciendis necessitatibus obcaecati nobis
+              laboriosam dignissimos veniam nostrum doloremque assumenda
+              commodi! Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Repellat illum laborum ut nihil excepturi eos repudiandae
+              architecto veritatis neque quaerat, minus, voluptate aspernatur.
+              Sunt obcaecati neque vitae quibusdam! Sit, expedita?
+            </p>
           </div>
-          <h4 class="name">Eric Tsai</h4>
-          <p class="intro">Lorem, ipsum dolor.</p>
-        </div>
-        <div class="personal-card">
-          <div class="photo-wrapper">
-            <img src="member2.webp" alt="member2" />
-          </div>
-          <h4 class="name">Nance Lai</h4>
-          <p class="intro">Lorem, ipsum dolor.</p>
-        </div>
-        <div class="personal-card">
-          <div class="photo-wrapper">
-            <img src="member3.webp" alt="member3" />
-          </div>
-          <h4 class="name">Sam Pan</h4>
-          <p class="intro">Lorem, ipsum dolor.</p>
-        </div>
-        <div class="personal-card">
-          <div class="photo-wrapper">
-            <img src="member4.webp" alt="member4" />
-          </div>
-          <h4 class="name">Andrew Tan</h4>
-          <p class="intro">Lorem, ipsum dolor.</p>
-        </div>
-        <div class="personal-card">
-          <div class="photo-wrapper">
-            <img src="member5.webp" alt="member5" />
-          </div>
-          <h4 class="name">John Doe</h4>
-          <p class="intro">Lorem, ipsum dolor.</p>
-        </div>
-        <div class="personal-card">
-          <div class="photo-wrapper">
-            <img src="member6.webp" alt="member6" />
-          </div>
-          <h4 class="name">Jim Chen</h4>
-          <p class="intro">Lorem, ipsum dolor.</p>
         </div>
       </section>
-    </section>
+      <section class="about">
+        <h3 id="about-title">about us</h3>
+        <section class="team">
+          <div class="personal-card">
+            <div class="photo-wrapper">
+              <img src="member1.webp" alt="member1" />
+            </div>
+            <h4 class="name">Eric Tsai</h4>
+            <p class="intro">Lorem, ipsum dolor.</p>
+          </div>
+          <div class="personal-card">
+            <div class="photo-wrapper">
+              <img src="member2.webp" alt="member2" />
+            </div>
+            <h4 class="name">Nance Lai</h4>
+            <p class="intro">Lorem, ipsum dolor.</p>
+          </div>
+          <div class="personal-card">
+            <div class="photo-wrapper">
+              <img src="member3.webp" alt="member3" />
+            </div>
+            <h4 class="name">Sam Pan</h4>
+            <p class="intro">Lorem, ipsum dolor.</p>
+          </div>
+          <div class="personal-card">
+            <div class="photo-wrapper">
+              <img src="member4.webp" alt="member4" />
+            </div>
+            <h4 class="name">Andrew Tan</h4>
+            <p class="intro">Lorem, ipsum dolor.</p>
+          </div>
+          <div class="personal-card">
+            <div class="photo-wrapper">
+              <img src="member5.webp" alt="member5" />
+            </div>
+            <h4 class="name">John Doe</h4>
+            <p class="intro">Lorem, ipsum dolor.</p>
+          </div>
+          <div class="personal-card">
+            <div class="photo-wrapper">
+              <img src="member6.webp" alt="member6" />
+            </div>
+            <h4 class="name">Jim Chen</h4>
+            <p class="intro">Lorem, ipsum dolor.</p>
+          </div>
+        </section>
+        <section class="contact">
+          <h4>contact us</h4>
+          <address class="contact-info">
+            <a href="mailto:hiphop200199@gmail.com">mail us here</a>
+            <p>address:Lorem ipsum dolor sit amet consectetur.</p>
+            <p>tel:0x-16578456</p>
+          </address>
+        </section>
+      </section>
+    </main>
+    <footer>
+      <a href="#visit-title">visit</a>
+      <a href="#stay-title">stay</a>
+      <a href="#learn-title">learn</a>
+      <a href="#about-title">about us</a>
+      <a href="https://github.com/hiphop200199" target="_blank"
+        ><img src="github.png" alt="github"
+      /></a>
+      <a href="https://www.instagram.com/hiphop200199/" target="_blank"
+        ><img src="instagram.webp" alt="instagram"
+      /></a>
+      <a href="https://www.facebook.com/zongwuc" target="_blank"
+        ><img src="facebook.webp" alt="facebook"
+      /></a>
+    </footer>
   </body>
 </html>
