--- a/index.html
+++ b/index.html
@@ -121,42 +121,42 @@
         <section class="team">
           <div class="personal-card">
             <div class="photo-wrapper">
-              <img src="member1.webp" alt="member1" />
+              <img src="ruben-2427641_1280.jpg" alt="member1" />
             </div>
             <h4 class="name">Eric Tsai</h4>
             <p class="intro">Lorem, ipsum dolor.</p>
           </div>
           <div class="personal-card">
             <div class="photo-wrapper">
-              <img src="member2.webp" alt="member2" />
+              <img src="business-woman-2071342_1280.jpg" alt="member2" />
             </div>
             <h4 class="name">Nance Lai</h4>
             <p class="intro">Lorem, ipsum dolor.</p>
           </div>
           <div class="personal-card">
             <div class="photo-wrapper">
-              <img src="member3.webp" alt="member3" />
+              <img src="actor-63082_1280.jpg" alt="member3" />
             </div>
             <h4 class="name">Sam Pan</h4>
             <p class="intro">Lorem, ipsum dolor.</p>
           </div>
           <div class="personal-card">
             <div class="photo-wrapper">
-              <img src="member4.webp" alt="member4" />
+              <img src="adult-1868750_1280.jpg" alt="member4" />
             </div>
             <h4 class="name">Andrew Tan</h4>
             <p class="intro">Lorem, ipsum dolor.</p>
           </div>
           <div class="personal-card">
             <div class="photo-wrapper">
-              <img src="member5.webp" alt="member5" />
+              <img src="model-2911332_1280.jpg" alt="member5" />
             </div>
             <h4 class="name">John Doe</h4>
             <p class="intro">Lorem, ipsum dolor.</p>
           </div>
           <div class="personal-card">
             <div class="photo-wrapper">
-              <img src="member6.webp" alt="member6" />
+              <img src="african-american-1436661_640.jpg" alt="member6" />
             </div>
             <h4 class="name">Jim Chen</h4>
             <p class="intro">Lorem, ipsum dolor.</p>
